k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-static
  namespace: jquery
spec:
  selector: 
    matchLabels:
      app: jquery
  replicas: 1
  template:
    metadata:
      labels:
        app: jquery
    spec:
      containers:
      - name: jquery
        image: 693675909033.dkr.ecr.us-east-2.amazonaws.com/jquery-eks:$BUILD_NUMBER
        ports:
        - containerPort: 80
