k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jquery-ing
  namespace: jquery
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "dev-jquery.lakkireddy.in"
    http:
      paths:
      - path:
        backend:
          serviceName: k8s-jquery
          servicePort: 80
